--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,11 @@
         "documentationUrl": "https://github.com/LouisCuvelier/spinner/blob/master/README.md",
         "changelogUrl": "https://raw.githubusercontent.com/LouisCuvelier/spinner/master/CHANGELOG.md",
         "class": "louiscuvelier\\spinner\\Spinner"
+    },
+    "config": {
+        "allow-plugins": {
+            "yiisoft/yii2-composer": true,
+            "craftcms/plugin-installer": true
+        }
     }
 }
