--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,9 @@
         "allow-plugins": {
             "yiisoft/yii2-composer": true,
             "craftcms/plugin-installer": true
+        },
+        "platform": {
+            "php": "8.0.2"
         }
     }
 }
